# Logger_old

./: .gitignore  CMakeLists.txt  create_sandbox.bat  prepare_vs2013_x64.bat  prepare_vs2015_x64.bat
examples/: CMakeLists.txt  disabled.cpp  simple.cpp
src/: CMakeLists.txt  Logger.hpp  main.cpp
src/logger/: CallInfo.hpp  Logger.cpp  Logger.hpp  LoggerRegistry.cpp  LoggerRegistry.hpp  Message.cpp  Message.hpp  MessageService.hpp  StringHelpers.hpp
